feat: config 907739769--osr